C2: "assert(no_dead_loop) failed: dead loop detected" due to cmoving identity

XMLWordPrintable

    • 17
    • b30

        The attached Java Fuzzer test crashes with the following assertion which seems to be unrelated to JDK-8268019:

        To reproduce:
        $ java -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test Test.java
        $ java-Xcomp -XX:-TieredCompilation -XX:CompileOnly=Reduced Reduced.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S124123/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/57294efe-464f-4c0a-b55a-fd67bfa32e7b/runs/71c23d41-87fd-4de4-92b5-4ba130c3e1dd/workspace/open/src/hotspot/share/opto/phaseX.cpp:945), pid=295183, tid=295196
        # assert(no_dead_loop) failed: dead loop detected
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+7) (fastdebug build 18-ea+7-268)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+7-268, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x15c93f6] PhaseGVN::dead_loop_check(Node*) [clone .part.0]+0x156
        ............
        Command Line: -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Test.java
        ............
        Current thread (0x00007ffa981da920): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=295196, stack(0x00007ffa74a64000,0x00007ffa74b65000)]


        Current CompileTask:
        C2: 3295 88 b Test::lMeth (390 bytes)

        Stack: [0x00007ffa74a64000,0x00007ffa74b65000], sp=0x00007ffa74b603e0, free space=1008k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x15c93f6] PhaseGVN::dead_loop_check(Node*) [clone .part.0]+0x156
        V [libjvm.so+0x15d67f9] PhaseIterGVN::transform_old(Node*)+0x4f9
        V [libjvm.so+0x15cfcbe] PhaseIterGVN::optimize()+0x7e
        V [libjvm.so+0x9f7269] Compile::Optimize()+0x1b9
        V [libjvm.so+0x9f9ff4] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1564
        V [libjvm.so+0x81a076] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
        V [libjvm.so+0xa0aab9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xef9
        V [libjvm.so+0xa0b7e8] CompileBroker::compiler_thread_loop()+0x598
        V [libjvm.so+0x186829c] JavaThread::thread_main_inner()+0x27c
        V [libjvm.so+0x186eb90] Thread::call_run()+0x100
        V [libjvm.so+0x1551464] thread_native_entry(Thread*)+0x104

          1. Reduced.java
            0.5 kB
          2. hs_err_pid295183.log
            73 kB
          3. FuzzerUtils.java
            13 kB
          4. Test.java
            14 kB
          5. Test2.java
            8 kB

              Assignee:
              Christian Hagedorn
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: