8271056: C2: "assert(no_dead_loop) failed: dead loop detected" due to cmoving identity

Backport-of: 54481394a3b7d36b2326e22e4aa910a3e8041b5c